--- a/conf/tbc.conf
+++ b/conf/tbc.conf
@@ -8,8 +8,8 @@ SQLHOST=localhost
 SQLUSER=buildhost
 # Sql Password
 SQLPASSWD=buildhost
-# TBC git repo name for the setups/configs
-TBCGITREPONAME=tinderboxs_configs
+# TBC git repo path for the setups/configs /etc/portage
+TBCGITREPOPATH=/var/cache/tbc/tinderboxs_configs
 TBCSONFIG=base
 # Main logfile
 LOGFILE=/var/log/tbc
