update config and sql structure

--- a/conf/tbc.conf
+++ b/conf/tbc.conf
@@ -8,4 +8,8 @@ SQLHOST=localhost
 SQLUSER=buildhost
 # Sql Password
 SQLPASSWD=buildhost
+# loging level
+#LOG=INFO
+# logfile
+#LOGFILE=/var/log/tbc.log
 
