--- a/master.cfg
+++ b/master.cfg
@@ -1,6 +1,6 @@
 # -*- python -*-
 # ex: set filetype=python:
-from buildbot_gentoo_ci.config import schedulers, workers, builders
+from buildbot_gentoo_ci.config import schedulers, workers, builders, service
 
 # This is a sample buildmaster config file. It must be installed as
 # 'master.cfg' in your buildmaster's base directory.
@@ -51,7 +51,9 @@ c['builders'] = builders.gentoo_builders()
 # status of each build will be pushed to these targets. buildbot/reporters/*.py
 # has a variety to choose from, like IRC bots.
 
-#c['services'] = []
+c['services'] = [
+    service.GentooCiService(basedir)
+]
 
 ####### PROJECT IDENTITY
 
