Add config option project
Signed-off-by: Magnus Granberg <zorry@gentoo.org>

--- a/gentooci.cfg
+++ b/gentooci.cfg
@@ -9,9 +9,11 @@
 c = BuildmasterConfig = {}
 
 ####### DB URL
-####### DB URL
 # This specifies what database buildbot uses to store its state.
 # It's easy to start with sqlite, but it's recommended to switch to a dedicated
 # database, such as PostgreSQL or MySQL, for use in production environments.
 # http://docs.buildbot.net/current/manual/configuration/global.html#database-specification
 c['db_url'] = "mysql://buildbot:xxxx@192.168.1.x/gentooci?max_idle=300"
+
+# This specifies what project buildbot uses for Gentoo Ci as default
+c['project'] = "gosbsbase"
