Add config option project['repository_basedir']
Signed-off-by: Magnus Granberg <zorry@gentoo.org>

--- a/gentooci.cfg
+++ b/gentooci.cfg
@@ -17,3 +17,6 @@ c['db_url'] = "mysql://buildbot:xxxx@192.168.1.x/gentooci?max_idle=300"
 
 # This specifies what project buildbot uses for Gentoo Ci as default
 c['project'] = "gosbsbase"
+
+# This specifies what the repository base dir is
+c['repository_basedir'] = "repository"
