Add BuildFactory update_db_check
Signed-off-by: Magnus Granberg <zorry@gentoo.org>

--- a/gentooci.cfg
+++ b/gentooci.cfg
@@ -19,4 +19,4 @@ c['db_url'] = "mysql://buildbot:xxxx@192.168.1.x/gentooci?max_idle=300"
 c['project'] = "gosbsbase"
 
 # This specifies what the repository base dir is
-c['repository_basedir'] = "repository"
+c['repository_basedir'] = "/srv/repository"
