Update the cfg files (worker_data, project)
Signed-off-by: Magnus Granberg <zorry@gentoo.org>

--- a/gentooci.cfg
+++ b/gentooci.cfg
@@ -13,10 +13,30 @@ c = BuildmasterConfig = {}
 # It's easy to start with sqlite, but it's recommended to switch to a dedicated
 # database, such as PostgreSQL or MySQL, for use in production environments.
 # http://docs.buildbot.net/current/manual/configuration/global.html#database-specification
-c['db_url'] = "mysql://buildbot:xxxx@192.168.1.x/gentooci?max_idle=300"
+c['db_url'] = "postgresql://buildbot:password@ip/gentoo-ci"
+
+makeconf_list = []
+makeconf_list.append('LC_MESSAGES=C')
+makeconf_list.append('NOCOLOR="true"')
+makeconf_list.append('GCC_COLORS=""')
+makeconf_list.append('PORTAGE_TMPFS="/dev/shm"')
+makeconf_list.append('CLEAN_DELAY=0')
+makeconf_list.append('NOCOLOR=true')
+makeconf_list.append('PORT_LOGDIR="/var/cache/portage/logs"')
+makeconf_list.append('PKGDIR="/var/cache/portage/packages"')
+makeconf_list.append('DISTDIR="/var/cache/portage/distfiles"')
+makeconf_list.append('PORTAGE_ELOG_CLASSES="*"')
+# We need echo:info to get the logfile name
+makeconf_list.append('PORTAGE_ELOG_SYSTEM="save:* echo:info"')
+# use ansifilter on the logs
+makeconf_list.append('PORTAGE_LOG_FILTER_FILE_CMD="bash -c \'ansifilter --ignore-clear; exec cat\'"')
 
 # This specifies what project buildbot uses for Gentoo Ci as default
-c['project'] = "gosbsbase"
+c['project'] = {
+    'update_db' : 'gosbsbase',
+    'worker_portage_repos_path' : '/var/db/repos/',
+    'config_makeconfig' : makeconf_list,
+}
 
 # This specifies what the repository base dir is
-c['repository_basedir'] = "/srv/repository"
+c['repository_basedir'] = "repositorys"
