--- a/master.cfg
+++ b/master.cfg
@@ -1,20 +1,33 @@
 # -*- python -*-
 # ex: set filetype=python:
-from buildbot_gentoo_ci.config import schedulers, workers, builders, service
+from buildbot.plugins import util
+from buildbot_gentoo_ci.config import schedulers, workers, builders, service, change_source, reporters
 
 # This is a sample buildmaster config file. It must be installed as
 # 'master.cfg' in your buildmaster's base directory.
 
+#FIXME: Get workers from db or a file
+worker_data = [
+    {'uuid' : 'uuid', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'uuid', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'uuid', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'uuid', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'uuid', 'password' : 'password', 'type' : 'default', 'enable' : True, },
+    {'uuid' : 'uuid', 'password' : 'password', 'type' : 'default', 'enable' : True, },
+]
+
 # This is the dictionary that the buildmaster pays attention to. We also use
 # a shorter alias to save typing.
 c = BuildmasterConfig = {}
+
+c['buildbotNetUsageData'] = None
 
 ####### WORKERS
 
 # The 'workers' list defines the set of recognized workers. Each element is
 # a Worker object, specifying a unique worker name and password.  The same
 # worker name and password must be configured on the worker.
-c['workers'] = workers.gentoo_workers()
+c['workers'] = workers.gentoo_workers(worker_data)
 
 # 'protocols' contains information about protocols which master will use for
 # communicating with workers. You must define at least 'port' option that workers
@@ -28,7 +41,7 @@ c['protocols'] = {'pb': {'port': 9989}}
 # the 'change_source' setting tells the buildmaster how it should find out
 # about source code changes.  Here we point to the buildbot version of a python hello-world project.
 
-# c['change_source'] = []
+c['change_source'] = change_source.gentoo_change_source()
 
 ####### SCHEDULERS
 
@@ -43,7 +56,7 @@ c['schedulers'] = schedulers.gentoo_schedulers()
 # what steps, and which workers can execute them.  Note that any particular build will
 # only take place on one worker.
 
-c['builders'] = builders.gentoo_builders()
+c['builders'] = builders.gentoo_builders(worker_data)
 
 ####### BUILDBOT SERVICES
 
@@ -51,9 +64,9 @@ c['builders'] = builders.gentoo_builders()
 # status of each build will be pushed to these targets. buildbot/reporters/*.py
 # has a variety to choose from, like IRC bots.
 
-c['services'] = [
-    service.GentooCiService(basedir)
-]
+c['services'] = []
+c['services'].append(service.GentooCiService(basedir))
+c['services'] = reporters.gentoo_reporters(r=c['services'])
 
 ####### PROJECT IDENTITY
 
@@ -71,12 +84,21 @@ c['titleURL'] = "https://gentoo-ci.gentoo.org"
 c['buildbotURL'] = "http://localhost:8010/"
 
 # minimalistic config to activate new web UI
-c['www'] = dict(port=8010,
-                plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
+c['www'] = dict(port=8010, plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
+
+c['www']['ui_default_config'] = {
+    'Waterfall.lazy_limit_waterfall': 408,
+    'Console.buildLimit': 1000,
+    'Console.changeLimit': 150,
+    'Grid.revisionLimit': 30,
+    'BuildRequests.buildrequestFetchLimit': 100,
+    'ChangeBuilds.buildsFetchLimit': 150,
+    'Changes.changesFetchLimit': 150,
+}
 
 ####### DB URL
 # This specifies what database buildbot uses to store its state.
 # It's easy to start with sqlite, but it's recommended to switch to a dedicated
 # database, such as PostgreSQL or MySQL, for use in production environments.
 # http://docs.buildbot.net/current/manual/configuration/global.html#database-specification
-c['db_url'] = "mysql://buildbot:xxx@192.168.1.x/buildbot?max_idle=300"
+c['db_url'] = "postgresql://buildbot:password@ip/buildbot"
