Add support for GitLabStatusPush
Signed-off-by: Magnus Granberg <zorry@gentoo.org>

--- a/master.cfg
+++ b/master.cfg
@@ -1,6 +1,6 @@
 # -*- python -*-
 # ex: set filetype=python:
-from buildbot.plugins import util
+from buildbot.plugins import util, secrets
 from buildbot_gentoo_ci.config import schedulers, workers, builders, service, change_source, reporters
 
 # This is a sample buildmaster config file. It must be installed as
@@ -8,12 +8,14 @@ from buildbot_gentoo_ci.config import schedulers, workers, builders, service, ch
 
 #FIXME: Get workers from db or a file
 worker_data = [
-    {'uuid' : 'uuid', 'password' : '', 'type' : 'local', 'enable' : True, },
-    {'uuid' : 'uuid', 'password' : '', 'type' : 'local', 'enable' : True, },
-    {'uuid' : 'uuid', 'password' : '', 'type' : 'local', 'enable' : True, },
-    {'uuid' : 'uuid', 'password' : '', 'type' : 'local', 'enable' : True, },
-    {'uuid' : 'uuid', 'password' : 'password', 'type' : 'default', 'enable' : True, },
-    {'uuid' : 'uuid', 'password' : 'password', 'type' : 'default', 'enable' : True, },
+    {'uuid' : 'updatedb_1', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'updatedb_2', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'updatedb_3', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'updatedb_4', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfa', 'password' : 'test', 'type' : 'docker', 'enable' : True, },
+    {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfb', 'password' : 'test', 'type' : 'docker', 'enable' : True, },
+    {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfd', 'password' : 'test', 'type' : 'docker', 'enable' : True, },
+    {'uuid' : 'c89c2c1a-46e0-4ded-81dd-c51afeb7fcfa', 'password' : 'test', 'type' : 'node', 'enable' : True, },
 ]
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -21,6 +23,10 @@ worker_data = [
 c = BuildmasterConfig = {}
 
 c['buildbotNetUsageData'] = None
+
+####### SECRETS
+
+c['secretsProviders'] = [secrets.SecretInAFile(dirname="/var/lib/buildmaster/gentoo-ci-cloud/secrets/")]
 
 ####### WORKERS
 
@@ -81,7 +87,7 @@ c['titleURL'] = "https://gentoo-ci.gentoo.org"
 # the 'www' entry below, but with an externally-visible host name which the
 # buildbot cannot figure out without some help.
 
-c['buildbotURL'] = "http://localhost:8010/"
+c['buildbotURL'] = "http://90.231.13.235:8010/"
 
 # minimalistic config to activate new web UI
 c['www'] = dict(port=8010, plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
@@ -101,4 +107,4 @@ c['www']['ui_default_config'] = {
 # It's easy to start with sqlite, but it's recommended to switch to a dedicated
 # database, such as PostgreSQL or MySQL, for use in production environments.
 # http://docs.buildbot.net/current/manual/configuration/global.html#database-specification
-c['db_url'] = "postgresql://buildbot:password@ip/buildbot"
+c['db_url'] = "postgresql://buildbot:fooo@192.168.1.9/buildbot"
