Add support log docker worker
Signed-off-by: Magnus Granberg <zorry@gentoo.org>

--- a/master.cfg
+++ b/master.cfg
@@ -12,6 +12,7 @@ worker_data = [
     {'uuid' : 'updatedb_2', 'password' : '', 'type' : 'local', 'enable' : True, },
     {'uuid' : 'updatedb_3', 'password' : '', 'type' : 'local', 'enable' : True, },
     {'uuid' : 'updatedb_4', 'password' : '', 'type' : 'local', 'enable' : True, },
+    {'uuid' : 'c89c2c1a-46e0-4ded-81dd-c51afeb7fcfa', 'password' : 'test', 'type' : 'log', 'enable' : True, },
     {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfa', 'password' : 'test', 'type' : 'docker', 'enable' : True, },
     {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfb', 'password' : 'test', 'type' : 'docker', 'enable' : True, },
     {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfd', 'password' : 'test', 'type' : 'docker', 'enable' : True, },
