--- a/master.cfg
+++ b/master.cfg
@@ -48,7 +48,7 @@ c['protocols'] = {'pb': {'port': 9989}}
 # the 'change_source' setting tells the buildmaster how it should find out
 # about source code changes.  Here we point to the buildbot version of a python hello-world project.
 
-c['change_source'] = change_source.gentoo_change_source()
+#c['change_source'] = change_source.gentoo_change_source()
 
 ####### SCHEDULERS
 
@@ -91,7 +91,15 @@ c['titleURL'] = "https://gentoo-ci.gentoo.org"
 c['buildbotURL'] = "http://90.231.13.235:8010/"
 
 # minimalistic config to activate new web UI
-c['www'] = dict(port=8010, plugins=dict(waterfall_view={}, console_view={}, grid_view={}))
+c['www'] = dict(
+    port=8010,
+    plugins=dict(waterfall_view={}, console_view={}, grid_view={}),
+    change_hook_dialects={
+        'gitlab' : {
+            'secret': util.Secret("WWWHookGitlabToken"),
+        },
+    },
+)
 
 c['www']['ui_default_config'] = {
     'Waterfall.lazy_limit_waterfall': 408,
