config: update buildbot db

--- a/gentooci.cfg
+++ b/gentooci.cfg
@@ -13,7 +13,7 @@ c = BuildmasterConfig = {}
 # It's easy to start with sqlite, but it's recommended to switch to a dedicated
 # database, such as PostgreSQL or MySQL, for use in production environments.
 # http://docs.buildbot.net/current/manual/configuration/global.html#database-specification
-c['db_url'] = "postgresql://buildbot:password@ip/gentoo-ci"
+c['db_url'] = "postgresql://buildbot:bu1ldb0t@127.0.0.1/gentoo-ci"
 
 makeconf_list = []
 makeconf_list.append('PORTAGE_TMPFS="/dev/shm"')
