--- a/master.cfg
+++ b/master.cfg
@@ -121,4 +121,4 @@ c['www']['ui_default_config'] = {
 # It's easy to start with sqlite, but it's recommended to switch to a dedicated
 # database, such as PostgreSQL or MySQL, for use in production environments.
 # http://docs.buildbot.net/current/manual/configuration/global.html#database-specification
-c['db_url'] = "postgresql://buildbot:X@192.0.0.0/buildbot"
+c['db_url'] = "postgresql://buildbot:bu1ldb0t@127.0.0.1/buildbot"
