config: update project name

--- a/gentooci.cfg
+++ b/gentooci.cfg
@@ -29,7 +29,7 @@ makeconf_list.append('PORTAGE_LOG_FILTER_FILE_CMD="bash -c \'ansifilter --ignore
 
 # This specifies what project buildbot uses for Gentoo Ci as default
 c['project'] = {
-    'update_db' : 'gosbsbase',
+    'update_db' : 'gentoo-riscv-base',
     'worker_portage_repos_path' : '/var/db/repos/',
     'config_makeconfig' : makeconf_list,
 }
