config: re-enable source_change, use node insert log and docker worker

--- a/master.cfg
+++ b/master.cfg
@@ -10,15 +10,9 @@ from buildbot_gentoo_ci.config import schedulers, workers, builders, service, ch
 worker_data = [
     {'uuid' : 'updatedb_1', 'password' : '', 'type' : 'local', 'enable' : True, },
     {'uuid' : 'updatedb_2', 'password' : '', 'type' : 'local', 'enable' : True, },
-    {'uuid' : 'updatedb_3', 'password' : '', 'type' : 'local', 'enable' : True, },
-    {'uuid' : 'updatedb_4', 'password' : '', 'type' : 'local', 'enable' : True, },
-    {'uuid' : 'b89c2c1a-46e0-4ded-81dd-c51afeb7fcfa', 'password' : 'X', 'type' : 'log', 'enable' : True, },
-    {'uuid' : 'b89c2c1a-46e0-4ded-81dd-c51afeb7fcfb', 'password' : 'X', 'type' : 'log', 'enable' : True, },
-    {'uuid' : 'b89c2c1a-46e0-4ded-81dd-c51afeb7fcfc', 'password' : 'X', 'type' : 'log', 'enable' : True, },
-    {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfa', 'password' : 'X', 'type' : 'docker', 'enable' : True, },
-    {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfb', 'password' : 'X', 'type' : 'docker', 'enable' : True, },
-    {'uuid' : 'a89c2c1a-46e0-4ded-81dd-c51afeb7fcfd', 'password' : 'X', 'type' : 'docker', 'enable' : True, },
-    {'uuid' : 'c89c2c1a-46e0-4ded-81dd-c51afeb7fcfa', 'password' : 'X', 'type' : 'node', 'enable' : True, },
+    {'uuid' : 'riscv-systemd-updatedb', 'password' : 'Pa22w0rd', 'type' : 'node', 'enable' : True, },
+    {'uuid' : 'riscv-systemd-qemu-user-node-0', 'password' : 'Pa22w0rd', 'type' : 'node', 'enable' : True, },
+    {'uuid' : 'riscv-systemd-qemu-user-node-1', 'password' : 'Pa22w0rd', 'type' : 'node', 'enable' : True, },
 ]
 
 # This is the dictionary that the buildmaster pays attention to. We also use
@@ -51,7 +45,7 @@ c['protocols'] = {'pb': {'port': 9989}}
 # the 'change_source' setting tells the buildmaster how it should find out
 # about source code changes.  Here we point to the buildbot version of a python hello-world project.
 
-#c['change_source'] = change_source.gentoo_change_source()
+c['change_source'] = change_source.gentoo_change_source()
 
 ####### SCHEDULERS
 
