--- a/master.cfg
+++ b/master.cfg
@@ -85,7 +85,7 @@ c['titleURL'] = "https://gentoo-ci.gentoo.org"
 # the 'www' entry below, but with an externally-visible host name which the
 # buildbot cannot figure out without some help.
 
-c['buildbotURL'] = "http://0.0.0.0:8010/"
+c['buildbotURL'] = "http://localhost:8010/"
 
 # minimalistic config to activate new web UI
 c['www'] = dict(
