--- a/master.cfg
+++ b/master.cfg
@@ -78,18 +78,18 @@ c['services'] = reporters.gentoo_reporters(r=c['services'])
 # home pages (linked to the 'titleURL').
 
 c['title'] = "Gentoo CI"
-c['titleURL'] = "https://gentoo-ci.gentoo.org"
+c['titleURL'] = "build.onfoo.top"
 
 # the 'buildbotURL' string should point to the location where the buildbot's
 # internal web server is visible. This typically uses the port number set in
 # the 'www' entry below, but with an externally-visible host name which the
 # buildbot cannot figure out without some help.
 
-c['buildbotURL'] = "http://localhost:8010/"
+c['buildbotURL'] = "https://build.onfoo.top/"
 
 # minimalistic config to activate new web UI
 c['www'] = dict(
-    port=8010,
+    port="tcp:8010:interface=127.0.0.1",
     plugins=dict(waterfall_view={}, console_view={}, grid_view={}),
     change_hook_dialects={
         'gitlab' : {
